# MZFViewer

./: .firebaserc  .gitignore  Cargo.toml  LICENSE  README.md  TWO_TARGETS.md  firebase.json  index.html  package-lock.json  package.json  s.html  script.js  sharp.html  sinclair.html  zxtext2p
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
python_zx80/: detok.py
src/: lib.rs  mz_decoder.rs  z80_disasm.rs  zx80_decoder.rs  zx81_decoder.rs
